manifests and docs
Signed-off-by: Derek Wang <whynowy@gmail.com>

--- a/manifests/base/eventbus-controller/eventbus-controller-deployment.yaml
+++ b/manifests/base/eventbus-controller/eventbus-controller-deployment.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: eventbus-controller
     spec:
-      serviceAccountName: argo-events-sa
+      serviceAccountName: argo-eventbus-sa
       securityContext:
         runAsNonRoot: true
         runAsUser: 9731
