--- a/manifests/base/rbac/argo-eventbus-aggregate-to-admin.yaml
+++ b/manifests/base/rbac/argo-eventbus-aggregate-to-admin.yaml
@@ -2,22 +2,21 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    rbac.authorization.k8s.io/aggregate-to-view: "true"
-  name: argo-events-aggregate-to-view
+    rbac.authorization.k8s.io/aggregate-to-admin: "true"
+  name: argo-eventbus-aggregate-to-admin
 rules:
   - apiGroups:
       - argoproj.io
     resources:
-      - sensors
-      - sensors/finalizers
-      - sensors/status
-      - eventsources
-      - eventsources/finalizers
-      - eventsources/status
       - eventbus
       - eventbus/finalizers
       - eventbus/status
     verbs:
+      - create
+      - delete
+      - deletecollection
       - get
       - list
+      - patch
+      - update
       - watch
