--- a/manifests/base/rbac/argo-eventbus-binding.yaml
+++ b/manifests/base/rbac/argo-eventbus-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: argo-events-binding
+  name: argo-eventbus-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: argo-events-role
+  name: argo-eventbus-role
 subjects:
   - kind: ServiceAccount
-    name: argo-events-sa
-    namespace: argo-events
+    name: argo-eventbus-sa
+    namespace: default
