--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -42,24 +42,18 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: argo-eventbus-sa
-  namespace: argo-events
+  namespace: argo-eventbus
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
-  name: argo-events-aggregate-to-admin
+  name: argo-eventbus-aggregate-to-admin
 rules:
 - apiGroups:
   - argoproj.io
   resources:
-  - sensors
-  - sensors/finalizers
-  - sensors/status
-  - eventsources
-  - eventsources/finalizers
-  - eventsources/status
   - eventbus
   - eventbus/finalizers
   - eventbus/status
@@ -78,17 +72,11 @@ kind: ClusterRole
 metadata:
   labels:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
-  name: argo-events-aggregate-to-edit
+  name: argo-eventbus-aggregate-to-edit
 rules:
 - apiGroups:
   - argoproj.io
   resources:
-  - sensors
-  - sensors/finalizers
-  - sensors/status
-  - eventsources
-  - eventsources/finalizers
-  - eventsources/status
   - eventbus
   - eventbus/finalizers
   - eventbus/status
@@ -107,17 +95,11 @@ kind: ClusterRole
 metadata:
   labels:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
-  name: argo-events-aggregate-to-view
+  name: argo-eventbus-aggregate-to-view
 rules:
 - apiGroups:
   - argoproj.io
   resources:
-  - sensors
-  - sensors/finalizers
-  - sensors/status
-  - eventsources
-  - eventsources/finalizers
-  - eventsources/status
   - eventbus
   - eventbus/finalizers
   - eventbus/status
@@ -129,17 +111,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: argo-events-role
+  name: argo-eventbus-role
 rules:
 - apiGroups:
   - argoproj.io
   resources:
-  - sensors
-  - sensors/finalizers
-  - sensors/status
-  - eventsources
-  - eventsources/finalizers
-  - eventsources/status
   - eventbus
   - eventbus/finalizers
   - eventbus/status
@@ -172,7 +148,6 @@ rules:
 - apiGroups:
   - apps
   resources:
-  - deployments
   - statefulsets
   verbs:
   - create
@@ -186,21 +161,21 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: argo-events-binding
+  name: argo-eventbus-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: argo-events-role
+  name: argo-eventbus-role
 subjects:
 - kind: ServiceAccount
-  name: argo-events-sa
-  namespace: argo-events
+  name: argo-eventbus-sa
+  namespace: argo-eventbus
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: eventbus-controller
-  namespace: argo-events
+  namespace: argo-eventbus
 spec:
   replicas: 1
   selector:
@@ -241,4 +216,4 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 9731
-      serviceAccountName: argo-events-sa
+      serviceAccountName: argo-eventbus-sa
