--- a/manifests/namespace-install/rbac/kustomization.yaml
+++ b/manifests/namespace-install/rbac/kustomization.yaml
@@ -2,8 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../base
-  - rbac
-
-namespace: argo-eventbus
-
+  - argo-eventbus-role.yaml
+  - argo-eventbus-role-binding.yaml
