Update manifests to v0.1.1

--- a/manifests/namespace-install.yaml
+++ b/manifests/namespace-install.yaml
@@ -136,7 +136,7 @@ spec:
           value: nats-streaming:0.17.0
         - name: NATS_METRICS_EXPORTER_IMAGE
           value: synadia/prometheus-nats-exporter:0.6.2
-        image: quay.io/argoproj/argo-eventbus:latest
+        image: quay.io/argoproj/argo-eventbus:v0.1.1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
